--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -14,7 +14,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand logo" [routerLink]="['/']"><img src="assets/images/Logo.jpg"></a>
+					<a class="navbar-brand logo" [routerLink]="['/']"><img src="assets/images/logo.svg"></a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
