--- a/src/styles/base/fonts.scss
+++ b/src/styles/base/fonts.scss
@@ -2,16 +2,16 @@
 // Web fonts
 // --------------------------------------------------
 
-/*@font-face {
-	font-family: 'testFont';
-	src:url('');
-	src:url('') format('embedded-opentype'),
-		url('') format('truetype'),
-		url('') format('woff'),
-		url('') format('svg');
+@font-face {
+	font-family: 'icomoon';
+	src:  url('../fonts/icomoon/icomoon.eot?q1wjhq');
+	src:  url('../fonts/icomoon/icomoon.eot?q1wjhq#iefix') format('embedded-opentype'),
+				url('../fonts/icomoon/icomoon.ttf?q1wjhq') format('truetype'),
+				url('../fonts/icomoon/icomoon.woff?q1wjhq') format('woff'),
+				url('../fonts/icomoon/icomoon.svg?q1wjhq#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}*/
+}
 
 // Roboto Google font
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900);
