--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -10,6 +10,11 @@
 	font-family: $font-family-serif;
 }
 
+html,
+body {
+	font-weight: 300; 
+}
+
 p {
 	line-height: 1.4;
 
@@ -23,6 +28,7 @@ p {
 }
 
 a {
+	color: $brand-primary;
 	text-decoration: underline;
 }
 
