--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,7 +42,7 @@
 
 // Components w/ JavaScript
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/modals";
-//@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
 //@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
 
@@ -74,5 +74,6 @@
 @import "modules/header";
 @import "modules/footer";
 @import "modules/responsive-embed";
+@import "modules/tooltip";
 
 @import "modules/style-guide";
