--- a/src/app/styleguide/styleguide.html
+++ b/src/app/styleguide/styleguide.html
@@ -688,7 +688,7 @@
 					<form>
 						<div class="row vertical-center">
 							<div class="col-sm-4 col-md-3 vertical-center">
-								<label for="txt2" data-toggle="tooltip" data-placement="top" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit." class="tooltip-label">Label with tooltip</label>
+								<label for="txt2" data-toggle="tooltip" tooltipPlacement="top" tooltip="Lorem ipsum dolor sit amet, consectetur adipisicing elit." class="tooltip-label">Label with tooltip</label>
 							</div>
 							<div class="col-sm-8 col-md-9">
 								<input id="txt2" type="text" placeholder="Textbox"/>	
@@ -696,7 +696,7 @@
 						</div>
 						<div class="row vertical-center">
 							<div class="col-sm-4 col-md-3 vertical-center">
-								<label for="txt3" data-toggle="tooltip" data-placement="top" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit." class="tooltip-label">Tooltip</label>
+								<label for="txt3" data-toggle="tooltip" tooltipPlacement="top" tooltip="Lorem ipsum dolor sit amet, consectetur adipisicing elit." class="tooltip-label">Tooltip</label>
 							</div>
 							<div class="col-sm-8 col-md-9">
 								<input id="txt3" type="text" placeholder="Textbox"/>	
