added footer and modals

--- a/src/app/styleguide/styleguide.html
+++ b/src/app/styleguide/styleguide.html
@@ -180,13 +180,19 @@
 		<div class="style">
 			<div class="vertical-center">
 				<div class="col-xs-12 col-md-6 style-sample">
-					<label class="style-label">Hypertext</label>
+					<label class="style-label">Hyperlink</label>
 					<p><a href="">Lorem ipsum dolor sit amet</a>, consectetur adipisicing elit. <a href="">Eligendi</a> vero sapiente consectetur distinctio expedita commodi placeat pariatur, nisi. Obcaecati unde, excepturi id! Autem eum nobis animi voluptatibus <a href="">facere</a> pariatur atque.</p>
 				</div>
 				<div class="col-xs-12 col-md-6 style-vars">
 					<samp>
 						<var>color: </var>#00A5BC; (primary color)<br/>
 						<var>text-decoration: </var>underline;
+					</samp>
+					<br/><br/>
+					<samp>
+						<var>Considerations and Requirements:</var><br/>
+						- Hover state<br/>
+						- Visited style
 					</samp>
 				</div>
 			</div>
