--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,24 +2,4 @@
 <div class="container">
 	<router-outlet></router-outlet>
 </div>
-
-<!-- Page footer -->
-<footer class="footer-main">
-  <div class="container">
-    <div class="row">
-
-      <div class="col-md-8">
-        <ul class="list-inline">
-          <li><a href="">Link 1</a></li>
-          <li><a href="">Link 2</a></li>
-          <li><a href="">Link 3</a></li>
-        </ul>  
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto cumque quisquam vero autem, perspiciatis a voluptatibus nostrum consectetur labore eaque commodi quasi recusandae suscipit, enim ut rem? Architecto, optio, adipisci.</p>
-      </div>
-
-      <div class="col-md-4">
-        <img src="assets/images/logo.svg" class="pull-right logo">
-      </div>
-    </div>
-  </div>
-</footer>
+<as-footer [routes]="appRoutes" [brand]="appBrand"></as-footer>
