--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -20,8 +20,8 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a [routerLink]="['/styleguide']">Style guide</a></li>
+						<li><a [routerLink]="['/form']">Form</a></li>
 						<li><a [routerLink]="['/']">Link</a></li>
-						
 						<!-- Bootstrap dropdown menu -->
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links Dropdown <span class="caret"></span></a>
